welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:2: error: value || is not a member of Int
	if ( 0|| 1 || 2 || 3 || 4 || 5) {return "10:00"}
              ^alarmClock:4: error: value || is not a member of Int
	else { if (0|| 1 || 2 || 3 || 4 || 5) {return "7:00"}
                    ^